<resources>
    <string name="app_name">BlogyApp</string>
    <string name="add_post">Agregar entrada</string>
    <string name="home">Inicio</string>
    <string name="name_author">Nombre del autor</string>
    <string name="title">Titulo</string>
    <string name="content">Contenido</string>
    <string name="save">Guardar</string>
    <string name="entendido">Entendido</string>
    <string name="detalles">Detalle entrada</string>
    <string name="date">Fecha</string>
    <string name="search">Buscar</string>
    <string name="apply">Aplicar filtro</string>
    <string name="introduce_busqueda">Introduce tu busqueda</string>
</resources>